# Benchmarking-Non-Markovianity-Measures-in-Digital-Quantum-Simulation-of-Open-Quantum-Systems

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
qmembench/: __init__.py  circuits.py  collision.py  experiments.py  measures.py  mitigation.py  noise.py  plotting.py  reference.py  statistics.py  tomography.py
results/: phase0_measures_validation.json  phase1T_finite_temperature.json  phase1_stageA_validation.json  phase1_trotter_convergence.json  phase2_spin_boson.json  phase3_bootstrap.json  phase3_conflation_dt_check.json  phase3_estimator_validation.json  phase3_estimator_validation_coarse.json  phase3_noise_models.json  phase3_noise_robustness.json  phase3_zne.json  phase4_embedding_comparison.json  phase5_fock_rule.json  phase6_fair_collision.json  phase7_scaling.json  phase8_dimer.json  phase9_truncation_phase_diagram.json  phase_blp_pair_certificate.json
scripts/: run_all_full.py  run_phase0.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase3_bootstrap.py  run_phase4.py  run_review_fixes.py  run_tier1.py
tests/: test_chain_collision.py  test_circuits.py  test_dimer.py  test_finite_temperature.py  test_fock_rule.py  test_measures.py  test_mitigation.py  test_noise_models.py  test_phase_diagram.py  test_reference.py  test_scaling.py  test_statistics.py
